- Update markdown help export for `New-ADTTemplate`.

--- a/docs/New-ADTTemplate.mdx
+++ b/docs/New-ADTTemplate.mdx
@@ -53,7 +53,7 @@ Aliases:
 
 Required: False
 Position: 1
-Default value: $PWD
+Default value: $ExecutionContext.SessionState.Path.CurrentLocation.Path
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
