- Improve the output description in `Get-ADTApplication`'s comment-based help.

--- a/docs/Get-ADTApplication.mdx
+++ b/docs/Get-ADTApplication.mdx
@@ -181,15 +181,21 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### PSADT.Types.InstalledApplication
 
 ### Returns a custom type with information about an installed application:
-### - Publisher
+### - UninstallKey
+### - UninstallParentKey
+### - UninstallSubKey
+### - ProductCode
 ### - DisplayName
 ### - DisplayVersion
-### - ProductCode
 ### - UninstallString
+### - QuietUninstallString
 ### - InstallSource
 ### - InstallLocation
 ### - InstallDate
-### - Architecture
+### - Publisher
+### - SystemComponent
+### - WindowsInstaller
+### - Is64BitApplication
 ## NOTES
 An active ADT session is NOT required to use this function.
 
