- Allow `Initialize-ADTModule` to accept an array of ScriptDirectory values.

--- a/docs/Initialize-ADTModule.mdx
+++ b/docs/Initialize-ADTModule.mdx
@@ -12,7 +12,7 @@ Initializes the ADT module by setting up necessary configurations and environmen
 ## SYNTAX
 
 ```powershell
-Initialize-ADTModule [[-ScriptDirectory] <String>] [<CommonParameters>]
+Initialize-ADTModule [[-ScriptDirectory] <String[]>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -38,7 +38,7 @@ Initializes the ADT module with the default settings and configurations.
 An override directory to use for config and string loading.
 
 ```yaml
-Type: String
+Type: String[]
 Parameter Sets: (All)
 Aliases:
 
