- Update markdown help exports for `Invoke-ADTCommandWithRetries`.

--- a/docs/Invoke-ADTCommandWithRetries.mdx
+++ b/docs/Invoke-ADTCommandWithRetries.mdx
@@ -12,8 +12,9 @@ Drop-in replacement for any cmdlet/function where a retry is desirable due to tr
 ## SYNTAX
 
 ```powershell
-Invoke-ADTCommandWithRetries [-Command] <Object> [[-Retries] <UInt32>] [[-SleepSeconds] <UInt32>]
- [[-Parameters] <System.Collections.Generic.List`1[System.Object]>] [<CommonParameters>]
+Invoke-ADTCommandWithRetries [-Command] <Object> [-Retries <UInt32>] [-SleepDuration <TimeSpan>]
+ [-MaximumElapsedTime <TimeSpan>] [-SleepSeconds <UInt32>]
+ [-Parameters <System.Collections.Generic.List`1[System.Object]>] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -28,21 +29,26 @@ This function invokes the specified cmdlet/function, accepting all of its parame
 Invoke-ADTCommandWithRetries -Command Invoke-WebRequest -Uri https://aka.ms/getwinget -OutFile "$($adtSession.DirSupportFiles)\Microsoft.DesktopAppInstaller_8wekyb3d8bbwe.msixbundle"
 ```
 
-Downloads the latest WinGet installer to the SupportFiles directory. If the command fails, it will retry 3 times with 5 seconds between each attempt.
+Downloads the latest WinGet installer to the SupportFiles directory.
+If the command fails, it will retry 3 times with 5 seconds between each attempt.
 
 ### EXAMPLE 2
+
 ```powershell
-Invoke-ADTCommandWithRetries -Command Get-FileHash -Path '\\MyShare\MyFile' -MaximumElapsedTime (New-TimeSpan -Seconds 90) -SleepSeconds 2
+Invoke-ADTCommandWithRetries Get-FileHash -Path '\\MyShare\MyFile' -MaximumElapsedTime (New-TimeSpan -Seconds 90) -SleepDuration (New-TimeSpan -Seconds 1)
 ```
 
-Gets the hash of a file on an SMB share. If the connection to the SMB share drops, it will retry the command every 2 seconds until it successfully gets the hash or 90 seconds have passed since the initial attempt.
+Gets the hash of a file on an SMB share.
+If the connection to the SMB share drops, it will retry the command every 2 seconds until it successfully gets the hash or 90 seconds have passed since the initial attempt.
 
 ### EXAMPLE 3
+
 ```powershell
 Invoke-ADTCommandWithRetries Copy-ADTFile -Path \\MyShare\MyFile -Destination C:\Windows\Temp -Retries 5 -MaximumElapsedTime (New-TimeSpan -Minutes 5)
 ```
 
-Copies a file from an SMB share to C:\Windows\Temp. If the connection to the SMB share drops, it will retry the command once every 5 seconds until either 5 attempts have been made or 5 minutes have passed since the initial attempt.
+Copies a file from an SMB share to C:\Windows\Temp.
+If the connection to the SMB share drops, it will retry the command once every 5 seconds until either 5 attempts have been made or 5 minutes have passed since the initial attempt.
 
 ## PARAMETERS
 
@@ -78,9 +84,45 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -SleepDuration
+
+How long to sleep between retries.
+
+```yaml
+Type: TimeSpan
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: [System.TimeSpan]::FromSeconds(5)
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -MaximumElapsedTime
+
+The maximum elapsed time allowed to passed while attempting retries.
+If the maximum elapsted time has passed and there are still attempts remaining they will be disgarded.
+
+If this parameter is supplied and the `-Retries` parameter isn't, this command will continue to retry the provided command until the time limit runs out.
+
+```yaml
+Type: TimeSpan
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### -SleepSeconds
 
-How many seconds to sleep between retries.
+This parameter is obsolete and will be removed in PSAppDeployToolkit 4.2.0.
+Please use `-SleepDuration` instead.
 
 ```yaml
 Type: UInt32
@@ -90,21 +132,6 @@ Aliases:
 Required: False
 Position: Named
 Default value: 5
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -MaximumElapsedTime
-
-The maximum elapsed time allowed to passed while attempting retries. If the maximum elapsted time has passed and there are still attempts remaining they will be disgarded. If this parameter is supplied and the `-Retries` parameter isn't, this command will continue to retry the provided command until the time limit runs out.
-
-```yaml
-Type: TimeSpan
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
