Correct help example in New-ADTShortcut

--- a/docs/New-ADTShortcut.mdx
+++ b/docs/New-ADTShortcut.mdx
@@ -27,7 +27,7 @@ This function allows you to specify various parameters such as the target path, 
 ### EXAMPLE 1
 
 ```powershell
-New-ADTShortcut -Path "$env:ProgramData\Microsoft\Windows\Start Menu\My Shortcut.lnk" -TargetPath "$env:WinDir\System32\notepad.exe" -IconLocation "$env:WinDir\System32\notepad.exe" -Description 'Notepad' -WorkingDirectory "$env:HomeDrive\$env:HomePath"
+New-ADTShortcut -Path "$envCommonStartMenuPrograms\My Shortcut.lnk" -TargetPath "$envWinDir\notepad.exe" -IconLocation "$envWinDir\notepad.exe" -Description 'Notepad' -WorkingDirectory '%HOMEDRIVE%\%HOMEPATH%'
 ```
 
 Creates a new shortcut for Notepad with the specified parameters.
