- Amend comment-based help for `Set-ADTItemPermission`.

--- a/docs/Set-ADTItemPermission.mdx
+++ b/docs/Set-ADTItemPermission.mdx
@@ -94,8 +94,6 @@ Accept wildcard characters: False
 ### -Permission
 
 Permission or list of permissions to be set/added/removed/replaced.
-To see all the possible permissions go to 'http://technet.microsoft.com/fr-fr/library/ff730951.aspx'.
-
 Permission DeleteSubdirectoriesAndFiles does not apply to files.
 
 ```yaml
@@ -114,7 +112,6 @@ Accept wildcard characters: False
 ### -PermissionType
 
 Sets Access Control Type of the permissions.
-Allowed options: Allow, Deny
 
 ```yaml
 Type: AccessControlType
@@ -134,9 +131,9 @@ Accept wildcard characters: False
 Sets permission inheritance.
 Does not apply to files.
 Multiple options can be specified.
-Allowed options: ObjectInherit, ContainerInherit, None
 
-None - The permission entry is not inherited by child objects, ObjectInherit - The permission entry is inherited by child leaf objects.
+None - The permission entry is not inherited by child objects.
+ObjectInherit - The permission entry is inherited by child leaf objects.
 ContainerInherit - The permission entry is inherited by child container objects.
 
 ```yaml
@@ -156,7 +153,6 @@ Accept wildcard characters: False
 
 Sets how to propagate inheritance.
 Does not apply to files.
-Allowed options: None, InheritOnly, NoPropagateInherit
 
 None - Specifies that no inheritance flags are set.
 NoPropagateInherit - Specifies that the permission entry is not propagated to child objects.
@@ -179,9 +175,13 @@ Accept wildcard characters: False
 ### -Method
 
 Specifies which method will be used to apply the permissions.
-Allowed options: Add, Set, Reset.
 
-Add - adds permissions rules but it does not remove previous permissions, Set - overwrites matching permission rules with new ones, Reset - removes matching permissions rules and then adds permission rules, Remove - Removes matching permission rules, RemoveSpecific - Removes specific permissions, RemoveAll - Removes all permission rules for specified user/s
+AddAccessRule - Adds permissions rules but it does not remove previous permissions.
+SetAccessRule - Overwrites matching permission rules with new ones.
+ResetAccessRule - Removes matching permissions rules and then adds permission rules.
+RemoveAccessRule - Removes matching permission rules.
+RemoveAccessRuleAll - Removes all permission rules for specified user/s.
+RemoveAccessRuleSpecific - Removes specific permissions.
 
 ```yaml
 Type: String
