--- a/docs/Invoke-ADTAllUsersRegistryAction.mdx
+++ b/docs/Invoke-ADTAllUsersRegistryAction.mdx
@@ -94,7 +94,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: (Get-ADTUserProfiles)
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
