--- a/docs/Test-ADTServiceExists.mdx
+++ b/docs/Test-ADTServiceExists.mdx
@@ -33,7 +33,7 @@ Checks if the service 'wuauserv' exists.
 ### EXAMPLE 2
 
 ```powershell
-Test-ADTServiceExists -Name 'testservice' -PassThru | Where-Object { $_ } | ForEach-Object { $_.Delete() }
+Test-ADTServiceExists -Name testservice -UseCIM -PassThru | Invoke-CimMethod -MethodName Delete
 ```
 
 Checks if a service exists and then deletes it by using the -PassThru parameter.
