- Remove last remaining reference to `AppDeployToolkitConfig.xml` within comment-based help.

--- a/docs/Show-ADTInstallationPrompt.mdx
+++ b/docs/Show-ADTInstallationPrompt.mdx
@@ -165,8 +165,8 @@ Accept wildcard characters: False
 
 ### -PersistPrompt
 
-Specify whether to make the prompt persist in the center of the screen every couple of seconds, specified in the AppDeployToolkitConfig.xml.
-The user will have no option but to respond to the prompt - resistance is futile!
+Specify whether to make the prompt persist in the center of the screen every couple of seconds, specified in the config.psd1 file.
+The user will have no option but to respond to the prompt.
 
 ```yaml
 Type: SwitchParameter
