--- a/docs/Get-ADTRegistryKey.mdx
+++ b/docs/Get-ADTRegistryKey.mdx
@@ -79,7 +79,7 @@ Required: True
 Position: 1
 Default value: None
 Accept pipeline input: False
-Accept wildcard characters: False
+Accept wildcard characters: True
 ```
 
 ### -Name
