--- a/docs/Show-ADTInstallationWelcome.mdx
+++ b/docs/Show-ADTInstallationWelcome.mdx
@@ -7,37 +7,171 @@ hide_table_of_contents: false
 
 ## SYNOPSIS
 
-Show a welcome dialog prompting the user with information about the installation and actions to be performed before the installation can begin.
+Show a welcome dialog prompting the user with information about the deployment and actions to be performed before the deployment can begin.
 
 ## SYNTAX
 
-### None (Default)
+### Interactive (Default)
 
 ```powershell
-Show-ADTInstallationWelcome [-CloseProcesses <ProcessObject[]>] [-Silent] [-CloseProcessesCountdown <UInt32>]
- [-ForceCloseProcessesCountdown <UInt32>] [-PromptToSave] [-PersistPrompt] [-BlockExecution] [-AllowDefer]
- [-AllowDeferCloseProcesses] [-DeferTimes <UInt32>] [-DeferDays <UInt32>] [-DeferDeadline <String>]
- [-NoMinimizeWindows] [-NotTopMost] [-ForceCountdown <UInt32>] [-CustomText] -Title <String> -Subtitle <String>
- -DeploymentType <DeploymentType> [<CommonParameters>]
+Show-ADTInstallationWelcome [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost] [-CustomText] [-CheckDiskSpace]
+ -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### SilentCloseProcesses
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-Silent] [-BlockExecution] [-CheckDiskSpace]
+ -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-AllowDeferCloseProcesses]
+ -ForceCloseProcessesCountdown <UInt32> [-DeferTimes <UInt32>] [-DeferDays <UInt32>] [-DeferDeadline <String>]
+ [-DeferRunInterval <TimeSpan>] [-BlockExecution] [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows]
+ [-NotTopMost] [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-AllowDeferCloseProcesses]
+ -CloseProcessesCountdown <UInt32> [-DeferTimes <UInt32>] [-DeferDays <UInt32>] [-DeferDeadline <String>]
+ [-DeferRunInterval <TimeSpan>] [-BlockExecution] [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows]
+ [-NotTopMost] [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-AllowDeferCloseProcesses]
+ -ForceCountdown <UInt32> [-DeferTimes <UInt32>] [-DeferDays <UInt32>] [-DeferDeadline <String>]
+ [-DeferRunInterval <TimeSpan>] [-BlockExecution] [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows]
+ [-NotTopMost] [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesAllowDeferCloseProcesses
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-AllowDeferCloseProcesses]
+ [-DeferTimes <UInt32>] [-DeferDays <UInt32>] [-DeferDeadline <String>] [-DeferRunInterval <TimeSpan>]
+ [-BlockExecution] [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost] [-CustomText]
+ [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-AllowDefer]
+ -ForceCloseProcessesCountdown <UInt32> [-DeferTimes <UInt32>] [-DeferDays <UInt32>] [-DeferDeadline <String>]
+ [-DeferRunInterval <TimeSpan>] [-BlockExecution] [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows]
+ [-NotTopMost] [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesAllowDeferCloseProcessesCountdown
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-AllowDefer] -CloseProcessesCountdown <UInt32>
+ [-DeferTimes <UInt32>] [-DeferDays <UInt32>] [-DeferDeadline <String>] [-DeferRunInterval <TimeSpan>]
+ [-BlockExecution] [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost] [-CustomText]
+ [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesAllowDeferForceCountdown
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-AllowDefer] -ForceCountdown <UInt32>
+ [-DeferTimes <UInt32>] [-DeferDays <UInt32>] [-DeferDeadline <String>] [-DeferRunInterval <TimeSpan>]
+ [-BlockExecution] [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost] [-CustomText]
+ [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesAllowDefer
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-AllowDefer] [-DeferTimes <UInt32>]
+ [-DeferDays <UInt32>] [-DeferDeadline <String>] [-DeferRunInterval <TimeSpan>] [-BlockExecution]
+ [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost] [-CustomText] [-CheckDiskSpace]
+ -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesForceCloseProcessesCountdown
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> -ForceCloseProcessesCountdown <UInt32>
+ [-BlockExecution] [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost] [-CustomText]
+ [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcessesCloseProcessesCountdown
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> -CloseProcessesCountdown <UInt32>
+ [-BlockExecution] [-PromptToSave] [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost] [-CustomText]
+ [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveCloseProcesses
+
+```powershell
+Show-ADTInstallationWelcome -CloseProcesses <ProcessObject[]> [-BlockExecution] [-PromptToSave]
+ [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost] [-CustomText] [-CheckDiskSpace] -Title <String>
+ -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveAllowDeferForceCountdown
+
+```powershell
+Show-ADTInstallationWelcome [-AllowDefer] -ForceCountdown <UInt32> [-PersistPrompt] [-NoMinimizeWindows]
+ [-NotTopMost] [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveAllowDefer
+
+```powershell
+Show-ADTInstallationWelcome [-AllowDefer] [-DeferTimes <UInt32>] [-DeferDays <UInt32>]
+ [-DeferDeadline <String>] [-DeferRunInterval <TimeSpan>] [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost]
+ [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### InteractiveAllowDeferCloseProcessesForceCountdown
+
+```powershell
+Show-ADTInstallationWelcome [-AllowDeferCloseProcesses] -ForceCountdown <UInt32> [-PersistPrompt]
+ [-NoMinimizeWindows] [-NotTopMost] [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String>
+ [<CommonParameters>]
+```
+
+### InteractiveAllowDeferCloseProcesses
+
+```powershell
+Show-ADTInstallationWelcome [-AllowDeferCloseProcesses] [-DeferTimes <UInt32>] [-DeferDays <UInt32>]
+ [-DeferDeadline <String>] [-DeferRunInterval <TimeSpan>] [-PersistPrompt] [-NoMinimizeWindows] [-NotTopMost]
+ [-CustomText] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
+```
+
+### Silent
+
+```powershell
+Show-ADTInstallationWelcome [-Silent] [-CheckDiskSpace] -Title <String> -Subtitle <String> [<CommonParameters>]
 ```
 
 ### CheckDiskSpace
 
 ```powershell
-Show-ADTInstallationWelcome [-CloseProcesses <ProcessObject[]>] [-Silent] [-CloseProcessesCountdown <UInt32>]
- [-ForceCloseProcessesCountdown <UInt32>] [-PromptToSave] [-PersistPrompt] [-BlockExecution] [-AllowDefer]
- [-AllowDeferCloseProcesses] [-DeferTimes <UInt32>] [-DeferDays <UInt32>] [-DeferDeadline <String>]
- [-CheckDiskSpace] [-RequiredDiskSpace <UInt32>] [-NoMinimizeWindows] [-NotTopMost] [-ForceCountdown <UInt32>]
- [-CustomText] -Title <String> -Subtitle <String> -DeploymentType <DeploymentType> [<CommonParameters>]
+Show-ADTInstallationWelcome [-CheckDiskSpace] [-RequiredDiskSpace <UInt32>] -Title <String> -Subtitle <String>
+ [<CommonParameters>]
 ```
 
 ## DESCRIPTION
 
 The following prompts can be included in the welcome dialog:
     a) Close the specified running applications, or optionally close the applications without showing a prompt (using the -Silent switch).
-    b) Defer the installation a certain number of times, for a certain number of days or until a deadline is reached.
+    b) Defer the deployment a certain number of times, for a certain number of days or until a deadline is reached.
     c) Countdown until applications are automatically closed.
-    d) Prevent users from launching the specified applications while the installation is in progress.
+    d) Prevent users from launching the specified applications while the deployment is in progress.
 
 ## EXAMPLES
 
@@ -63,7 +197,7 @@ Close Word and Excel without prompting the user.
 Show-ADTInstallationWelcome -CloseProcesses @{ Name = 'winword' }, @{ Name = 'excel' } -BlockExecution
 ```
 
-Close Word and Excel and prevent the user from launching the applications while the installation is in progress.
+Close Word and Excel and prevent the user from launching the applications while the deployment is in progress.
 
 ### EXAMPLE 4
 
@@ -80,7 +214,7 @@ Show-ADTInstallationWelcome -CloseProcesses @{ Name = 'winword' }, @{ Name = 'ms
 ```
 
 Prompt the user to close Word, MSAccess and Excel.
-By using the PersistPrompt switch, the dialog will return to the center of the screen every couple of seconds, specified in the AppDeployToolkitConfig.xml, so the user cannot ignore it by dragging it aside.
+By using the PersistPrompt switch, the dialog will return to the center of the screen every couple of seconds, specified in the config.psd1, so the user cannot ignore it by dragging it aside.
 
 ### EXAMPLE 6
 
@@ -88,17 +222,17 @@ By using the PersistPrompt switch, the dialog will return to the center of the s
 Show-ADTInstallationWelcome -AllowDefer -DeferDeadline '25/08/2013'
 ```
 
-Allow the user to defer the installation until the deadline is reached.
+Allow the user to defer the deployment until the deadline is reached.
 
 ### EXAMPLE 7
 
 ```powershell
 Show-ADTInstallationWelcome -CloseProcesses @{ Name = 'winword' }, @{ Name = 'excel' } -BlockExecution -AllowDefer -DeferTimes 10 -DeferDeadline '25/08/2013' -CloseProcessesCountdown 600
-Close Word and Excel and prevent the user from launching the applications while the installation is in progress.
+Close Word and Excel and prevent the user from launching the applications while the deployment is in progress.
 ```
 
 
-Allow the user to defer the installation a maximum of 10 times or until the deadline is reached, whichever happens first.
+Allow the user to defer the deployment a maximum of 10 times or until the deadline is reached, whichever happens first.
 
 When deferral expires, prompt the user to close the applications and automatically close them after 10 minutes.
 
@@ -112,12 +246,45 @@ Specify custom descriptions like this: @\{ Name = 'winword'; Description = 'Micr
 
 ```yaml
 Type: ProcessObject[]
-Parameter Sets: (All)
+Parameter Sets: SilentCloseProcesses, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses
 Aliases:
 
-Required: False
+Required: True
 Position: Named
 Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -AllowDefer
+
+Enables an optional defer button to allow the user to defer the deployment.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer
+Aliases:
+
+Required: True
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -AllowDeferCloseProcesses
+
+Enables an optional defer button to allow the user to defer the deployment only if there are running applications that need to be closed.
+This parameter automatically enables -AllowDefer
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Aliases:
+
+Required: True
+Position: Named
+Default value: False
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -128,10 +295,10 @@ Stop processes without prompting the user.
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: (All)
+Parameter Sets: SilentCloseProcesses, Silent
 Aliases:
 
-Required: False
+Required: True
 Position: Named
 Default value: False
 Accept pipeline input: False
@@ -145,10 +312,10 @@ This only takes effect if deferral is not allowed or has expired.
 
 ```yaml
 Type: UInt32
-Parameter Sets: (All)
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown
 Aliases:
 
-Required: False
+Required: True
 Position: Named
 Default value: 0
 Accept pipeline input: False
@@ -161,107 +328,39 @@ Option to provide a countdown in seconds until the specified applications are au
 
 ```yaml
 Type: UInt32
-Parameter Sets: (All)
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesForceCloseProcessesCountdown
 Aliases:
 
-Required: False
+Required: True
 Position: Named
 Default value: 0
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -PromptToSave
+### -ForceCountdown
 
-Specify whether to prompt to save working documents when the user chooses to close applications by selecting the "Close Programs" button.
-Option does not work in SYSTEM context unless toolkit launched with "psexec.exe -s -i" to run it as an interactive process under the SYSTEM account.
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: Named
-Default value: False
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -PersistPrompt
-
-Specify whether to make the Show-ADTInstallationWelcome prompt persist in the center of the screen every couple of seconds, specified in the AppDeployToolkitConfig.xml.
-The user will have no option but to respond to the prompt.
-This only takes effect if deferral is not allowed or has expired.
+Specify a countdown to display before automatically proceeding with the deployment when a deferral is enabled.
 
 ```yaml
-Type: SwitchParameter
-Parameter Sets: (All)
+Type: UInt32
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveAllowDeferForceCountdown, InteractiveAllowDeferCloseProcessesForceCountdown
 Aliases:
 
-Required: False
+Required: True
 Position: Named
-Default value: False
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -BlockExecution
-
-Option to prevent the user from launching processes/applications, specified in -CloseProcesses, during the installation.
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: Named
-Default value: False
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -AllowDefer
-
-Enables an optional defer button to allow the user to defer the installation.
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: Named
-Default value: False
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -AllowDeferCloseProcesses
-
-Enables an optional defer button to allow the user to defer the installation only if there are running applications that need to be closed.
-This parameter automatically enables -AllowDefer
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: Named
-Default value: False
+Default value: 0
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
 ### -DeferTimes
 
-Specify the number of times the installation can be deferred.
+Specify the number of times the deployment can be deferred.
 
 ```yaml
 Type: UInt32
-Parameter Sets: (All)
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer, InteractiveAllowDeferCloseProcesses
 Aliases:
 
 Required: False
@@ -273,12 +372,12 @@ Accept wildcard characters: False
 
 ### -DeferDays
 
-Specify the number of days since first run that the installation can be deferred.
+Specify the number of days since first run that the deployment can be deferred.
 This is converted to a deadline.
 
 ```yaml
 Type: UInt32
-Parameter Sets: (All)
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer, InteractiveAllowDeferCloseProcesses
 Aliases:
 
 Required: False
@@ -290,7 +389,7 @@ Accept wildcard characters: False
 
 ### -DeferDeadline
 
-Specify the deadline date until which the installation can be deferred.
+Specify the deadline date until which the deployment can be deferred.
 
 Specify the date in the local culture if the script is intended for that same culture.
 
@@ -302,7 +401,7 @@ The deadline date will be displayed to the user in the format of their culture.
 
 ```yaml
 Type: String
-Parameter Sets: (All)
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer, InteractiveAllowDeferCloseProcesses
 Aliases:
 
 Required: False
@@ -312,18 +411,141 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -DeferRunInterval
+
+Specifies the time span that must elapse before prompting the user again if a process listed in 'CloseProcesses' is still running after a deferral.
+
+This addresses the issue where Intune retries deployments shortly after a user defers, preventing multiple immediate prompts and improving the user experience.
+
+Example:
+- To specify 30 minutes, use: `([System.TimeSpan]::FromMinutes(30))`.
+- To specify 24 hours, use: `([System.TimeSpan]::FromHours(24))`.
+
+```yaml
+Type: TimeSpan
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveAllowDefer, InteractiveAllowDeferCloseProcesses
+Aliases:
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -BlockExecution
+
+Option to prevent the user from launching processes/applications, specified in -CloseProcesses, during the deployment.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: SilentCloseProcesses, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -PromptToSave
+
+Specify whether to prompt to save working documents when the user chooses to close applications by selecting the "Close Programs" button.
+Option does not work in SYSTEM context unless toolkit launched with "psexec.exe -s -i" to run it as an interactive process under the SYSTEM account.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -PersistPrompt
+
+Specify whether to make the Show-ADTInstallationWelcome prompt persist in the center of the screen every couple of seconds, specified in the config.psd1.
+The user will have no option but to respond to the prompt.
+This only takes effect if deferral is not allowed or has expired.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -NoMinimizeWindows
+
+Specifies whether to minimize other windows when displaying prompt.
+Default: $false.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -NotTopMost
+
+Specifies whether the window is the topmost window.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -CustomText
+
+Specify whether to display a custom message specified in the string.psd1 file.
+Custom message must be populated for each language section in the string.psd1 file.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: Interactive, InteractiveCloseProcessesAllowDeferCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesForceCountdown, InteractiveCloseProcessesAllowDeferCloseProcesses, InteractiveCloseProcessesAllowDeferForceCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferCloseProcessesCountdown, InteractiveCloseProcessesAllowDeferForceCountdown, InteractiveCloseProcessesAllowDefer, InteractiveCloseProcessesForceCloseProcessesCountdown, InteractiveCloseProcessesCloseProcessesCountdown, InteractiveCloseProcesses, InteractiveAllowDeferForceCountdown, InteractiveAllowDefer, InteractiveAllowDeferCloseProcessesForceCountdown, InteractiveAllowDeferCloseProcesses
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### -CheckDiskSpace
 
-Specify whether to check if there is enough disk space for the installation to proceed.
+Specify whether to check if there is enough disk space for the deployment to proceed.
 
 If this parameter is specified without the RequiredDiskSpace parameter, the required disk space is calculated automatically based on the size of the script source and associated files.
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: CheckDiskSpace
+Parameter Sets: (All)
 Aliases:
 
-Required: True
+Required: False
 Position: Named
 Default value: False
 Accept pipeline input: False
@@ -342,89 +564,6 @@ Aliases:
 Required: False
 Position: Named
 Default value: 0
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -NoMinimizeWindows
-
-Specifies whether to minimize other windows when displaying prompt.
-Default: $false.
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: Named
-Default value: False
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -NotTopMost
-
-Specifies whether the window is the topmost window.
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: Named
-Default value: False
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -ForceCountdown
-
-Specify a countdown to display before automatically proceeding with the installation when a deferral is enabled.
-
-```yaml
-Type: UInt32
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: Named
-Default value: 0
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -CustomText
-
-Specify whether to display a custom message specified in the string.psd1 file.
-Custom message must be populated for each language section in the string.psd1 file.
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: Named
-Default value: False
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -DeploymentType
-
-The deployment type.
-Default: the session's DeploymentType value.
-
-```yaml
-Type: DeploymentType
-Parameter Sets: (All)
-Aliases:
-
-Required: True
-Position: Named
-Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -449,7 +588,7 @@ Accept wildcard characters: False
 ### -Title
 
 Title of the prompt.
-Default: the application installation name.
+Default: the application deployment name.
 
 ```yaml
 Type: String
@@ -483,7 +622,7 @@ An active ADT session is NOT required to use this function.
 The process descriptions are retrieved via Get-Process, with a fall back on the process name if no description is available.
 Alternatively, you can specify the description yourself with a '=' symbol - see examples.
 
-The dialog box will timeout after the timeout specified in the config.psd1 file (default 55 minutes) to prevent Intune/SCCM installations from timing out and returning a failure code.
+The dialog box will timeout after the timeout specified in the config.psd1 file (default 55 minutes) to prevent Intune/SCCM deployments from timing out and returning a failure code.
 When the dialog times out, the script will exit and return a 1618 code (SCCM fast retry code).
 
 Tags: psadt
