--- a/docs/Get-ADTMsiTableProperty.mdx
+++ b/docs/Get-ADTMsiTableProperty.mdx
@@ -42,10 +42,10 @@ Retrieve all of the properties from the default 'Property' table.
 ### EXAMPLE 2
 
 ```powershell
-Get-ADTMsiTableProperty -Path 'C:\Package\AppDeploy.msi' -TransformPath 'C:\Package\AppDeploy.mst' -Table 'Property' | Select-Object -ExpandProperty ProductCode
+(Get-ADTMsiTableProperty -Path 'C:\Package\AppDeploy.msi' -TransformPath 'C:\Package\AppDeploy.mst' -Table 'Property').ProductCode
 ```
 
-Retrieve all of the properties from the 'Property' table and then pipe to Select-Object to select the ProductCode property.
+Retrieve all of the properties from the 'Property' table, then retrieves just the 'ProductCode' member.
 
 ### EXAMPLE 3
 
@@ -170,9 +170,9 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### You cannot pipe objects to this function.
 ## OUTPUTS
 
-### System.Management.Automation.PSObject
+### System.Collections.ObjectModel.ReadOnlyDictionary`2[[System.String],[System.Object]]
 
-### Returns a custom object with the following properties: 'Name' and 'Value'.
+### Returns a readonly dictionary with the properties as key/value pairs.
 ## NOTES
 An active ADT session is NOT required to use this function.
 
