--- a/docs/Invoke-ADTFunctionErrorHandler.mdx
+++ b/docs/Invoke-ADTFunctionErrorHandler.mdx
@@ -15,28 +15,28 @@ Handles errors within ADT functions by logging and optionally passing through th
 
 ```powershell
 Invoke-ADTFunctionErrorHandler -Cmdlet <PSCmdlet> -SessionState <SessionState> -ErrorRecord <ErrorRecord>
- -LogMessage <String> [<CommonParameters>]
+ [-LogMessage <String>] [<CommonParameters>]
 ```
 
 ### ResolveErrorProperties
 
 ```powershell
 Invoke-ADTFunctionErrorHandler -Cmdlet <PSCmdlet> -SessionState <SessionState> -ErrorRecord <ErrorRecord>
- -LogMessage <String> -ResolveErrorProperties <String[]> [<CommonParameters>]
+ [-LogMessage <String>] -ResolveErrorProperties <String[]> [<CommonParameters>]
 ```
 
 ### AdditionalResolveErrorProperties
 
 ```powershell
 Invoke-ADTFunctionErrorHandler -Cmdlet <PSCmdlet> -SessionState <SessionState> -ErrorRecord <ErrorRecord>
- -LogMessage <String> -AdditionalResolveErrorProperties <String[]> [<CommonParameters>]
+ [-LogMessage <String>] -AdditionalResolveErrorProperties <String[]> [<CommonParameters>]
 ```
 
 ### DisableErrorResolving
 
 ```powershell
 Invoke-ADTFunctionErrorHandler -Cmdlet <PSCmdlet> -SessionState <SessionState> -ErrorRecord <ErrorRecord>
- -LogMessage <String> [-DisableErrorResolving] [<CommonParameters>]
+ [-LogMessage <String>] [-DisableErrorResolving] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -123,7 +123,7 @@ Type: String
 Parameter Sets: (All)
 Aliases:
 
-Required: True
+Required: False
 Position: Named
 Default value: None
 Accept pipeline input: False
